--- a/6/index.html
+++ b/6/index.html
@@ -6,18 +6,18 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="wrraper">
 	<header>Header</header>
-		<div class="box">
-			<aside class ="left">aside1</aside>
-			<aside class ="right">aside2</aside>
-				<div class="container">
-					<div class ="content">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic nihil optio tempora nobis, ullam, qui mollitia quam esse corrupti, libero aperiam repellendus debitis quaerat asperiores id? Consequuntur, aperiam velit dolorem molestiae dicta a enim provident impedit optio explicabo perspiciatis tempora numquam minus, placeat quis nobis magnam quia quos debitis corporis culpa voluptatum eum corrupti distinctio. Ad ullam autem sunt, tenetur, accusantium dolore. Optio repudiandae officia natus totam enim voluptatum, neque alias obcaecati, rem maxime nihil accusantium repellat fugit deleniti. Sint doloremque amet repellat unde nam reiciendis, distinctio laborum eos officia, quisquam nesciunt assumenda ipsa eligendi quibusdam perspiciatis cum omnis cumque adipisci laboriosam, sapiente aliquam atque quis? Consequuntur sit recusandae nihil beatae consectetur non repellendus minus, impedit numquam eaque obcaecati et voluptatibus voluptates vero nulla fugit corrupti eligendi maiores, inventore architecto laborum enim? Cumque aliquid debitis eligendi, natus dolorum a quod atque expedita. Magni tenetur enim quas, delectus fugit similique, harum ut, est minima quidem eligendi voluptates deleniti ex fuga reprehenderit, libero quos nihil labore! Corporis totam blanditiis aliquam autem! Ullam non ipsum provident neque quaerat eum placeat voluptatum quidem voluptas repellat explicabo, obcaecati at corrupti a maiores vel aliquam nesciunt sapiente praesentium? Voluptate tenetur dolorum deserunt, quae commodi! Incidunt, ullam nesciunt autem laboriosam eum sit debitis praesentium doloribus possimus aut repellendus perferendis laudantium suscipit eligendi est rerum animi veritatis maxime laborum sunt ad. Dolore consequuntur error amet, molestias, sint accusamus, cupiditate officia nemo fuga quae aliquam laborum! Soluta sequi perspiciatis fugit accusamus at iste reiciendis itaque cupiditate ratione, quidem quibusdam!</p>
-				</div>
-			</div>
+	<div class="box">
+		 <div class="container3">
+    		<div class="container2">
+       			 <div class="container1">
+           				<div class="col1">Aside1</div>
+           					<div class="col2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem vel rerum illum, consequuntur ullam perspiciatis sit commodi totam, repellendus culpa atque ipsum architecto eos impedit dicta laboriosam a maxime unde rem qui assumenda sint nesciunt optio cumque! Amet, iste quibusdam sapiente harum! Nostrum, eaque qui porro molestias ratione magni. Mollitia ipsa odit sapiente sequi illum culpa possimus, molestiae eos voluptas minus laboriosam iure provident officiis nesciunt ab explicabo expedita. Est ea natus, nostrum, officia, dolore minus quod error vero asperiores autem iste soluta accusamus amet veniam voluptatum pariatur placeat praesentium perspiciatis nemo. Eos, id, impedit aperiam illum perspiciatis provident nulla?</div>
+            		<div class="col3">Aside2</div>
+        		</div>
+   			</div>
 		</div>
-	</div>
-		<footer>Footer</footer>
+		</div>
+	<footer>Footer</footer>
 </body>
 </html>
