--- a/6/index.html
+++ b/6/index.html
@@ -12,7 +12,7 @@
     		<div class="container2">
        			 <div class="container1">
            				<div class="col1">Aside1</div>
-           					<div class="col2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem vel rerum illum, consequuntur ullam perspiciatis sit commodi totam, repellendus culpa atque ipsum architecto eos impedit dicta laboriosam a maxime unde rem qui assumenda sint nesciunt optio cumque! Amet, iste quibusdam sapiente harum! Nostrum, eaque qui porro molestias ratione magni. Mollitia ipsa odit sapiente sequi illum culpa possimus, molestiae eos voluptas minus laboriosam iure provident officiis nesciunt ab explicabo expedita. Est ea natus, nostrum, officia, dolore minus quod error vero asperiores autem iste soluta accusamus amet veniam voluptatum pariatur placeat praesentium perspiciatis nemo. Eos, id, impedit aperiam illum perspiciatis provident nulla?</div>
+           					<div class="col2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In sed sunt dolor quae blanditiis. Molestias quod non repudiandae tenetur ad deleniti magni enim iusto cumque tempore dignissimos, quibusdam eligendi facilis fugit id vitae quae accusamus pariatur possimus repellendus doloremque, ut quia. Vero consequatur, architecto rem! Quasi fugit nulla provident nam magnam aliquid enim veritatis necessitatibus, nisi mollitia repellendus odio praesentium excepturi qui tempore sequi a distinctio, rem ut odit porro. Atque sequi, fugit exercitationem. Recusandae, ullam tempore quo ad neque consequatur fugiat illo vitae animi et fuga quia laudantium non veritatis voluptates vero excepturi rem saepe error atque cumque aspernatur!</div>
             		<div class="col3">Aside2</div>
         		</div>
    			</div>
