--- a/7/index.html
+++ b/7/index.html
@@ -23,18 +23,17 @@
           </nav>
           </div>
 		</header>
-		<content>
-      <section class="content">
+		    <section class="content">
         <h1 id="about"><strong>About me</strong></h1>
         <p>Здравствуйте. Меня зовут Мирослав. Вырос  я в красивом городе Купянск. В детсве не когда не мог сидеть на месте, поэтому ходил на разные кружки которые были  в нашем городе. Закончил музыкальную школу, по классу фортепиано, любил легкую атлетику. После школы поступил в университет ХНУРЭ (Харьковский Национальный Университет Радиоэлектроники), имено здесь узнал очень много нового и познакомился с очень интересными людьми . Также смог попробывать себя в качестве бармена и увидеть как это работает. Оказалось что это не просто тупое наливание алкоголя, а довольно творческая професия и при этом ты должен быть в какой-то степени психологом для своих посетителей). Этим летом пришел к своему другу, он занимаеться версткой сайтов и мне стало интересно как это все работает. Решил тоже попробывать как это работает в итоге очень заинтересовала эта професия. И вот теперь я здесь, изучаю свою новую профессию с которой хочу связать свою жизнь. </p>
         <h1 id="port"><strong>Portfolio</strong></h1>
         <div class="products">
-            <div class="product"><a href="#"><img src="images/1.png" width="300px" height="200px"></a> </div>
-            <div class="product"><a href="#"><img src="images/2.jpg" width="300px" height="200px"></a> </div>
-            <div class="product"><a href="#"><img src="images/3.jpg" width="300px" height="200px"></a> </div>
-            <div class="product"><a href="#"><img src="images/4.jpg" width="300px" height="200px"></a> </div>
-            <div class="product"><a href="#"><img src="images/5.jpg" width="300px" height="200px"></a> </div>
-            <div class="product"><a href="#"><img src="images/6.jpg" width="300px" height="200px"></a> </div>
+            <div class="product"><a href="#"><img src="images/1.png" alt="" width="300" height="200"></a> </div>
+            <div class="product"><a href="#"><img src="images/2.jpg" alt="" width="300" height="200"></a> </div>
+            <div class="product"><a href="#"><img src="images/3.jpg" alt="" width="300" height="200"></a> </div>
+            <div class="product"><a href="#"><img src="images/4.jpg" alt="" width="300" height="200"></a> </div>
+            <div class="product"><a href="#"><img src="images/5.jpg" alt="" width="300" height="200"></a> </div>
+            <div class="product"><a href="#"><img src="images/6.jpg" alt="" width="300" height="200"></a> </div>
         </div>
         <h1 id="contact"><strong>Contacts</strong></h1>
         <div class="Contacts">
@@ -44,9 +43,9 @@
             <div class="cont">+38-095-333-68-28</div>
             <div class="cont">miroslav951@gmail.com</div>
             <div class="cont">Kramarenko93</div>
+        </div>
       </section>
-		</content>
-    <footer>
+		  <footer>
         <nav class="footer-nav">
           <ul>
             <li>Marcus © 2016</li>
